<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/Infome_nome"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/edit_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="abcdefghijklmnopqrstuvwxyzçêÁÀÂÃÉÊÍÓÒÔÕÚÜáàâãéêíóòôõúüÇçãéÊÃÂÔÇÉÈABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:layout_marginTop="8dp"
        android:hint="@string/Name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/Informe_idade"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/edit_idade_H"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/years"
        android:inputType="number"
        android:maxLength="2" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/Informe_raça"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/edit_raça"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/race"
        android:inputType="number"
        android:maxLength="2" />



    <TextView
        android:id="@+id/text_total_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:text="@string/total_value"
        android:visibility="gone"
        android:textAllCaps="true"
        android:textColor="@color/verde"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/cinza"
        android:padding="16dp"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>
